--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -7,11 +7,19 @@ Flask==2.2.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+joblib==1.2.0
 MarkupSafe==2.1.2
+numpy==1.24.2
+pandas==1.5.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2022.7.1
 redis==4.5.3
 requests==2.28.2
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 spotipy==2.22.1
+threadpoolctl==3.1.0
 urllib3==1.26.15
 Werkzeug==2.2.3
