--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.3
+Flask-Cors==3.0.10
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
